@@ -7,7 +7,7 @@ use strict;
 # whose content is the input to this script.
 
 {
-    my ($sec,$min,$hour,$mday,$mon,$year) = gmtime($ENV{SOURCE_DATE_EPOCH} // time());
+    my ($sec,$min,$hour,$mday,$mon,$year) = gmtime(defined $ENV{SOURCE_DATE_EPOCH} ? $ENV{SOURCE_DATE_EPOCH} : time());
     printf "/* This file was generated by mkhelp.pl from less.hlp at %d:%02d on %d/%d/%d */\n",
         $hour, $min, $year+1900, $mon+1, $mday;
     print "#include \"less.h\"\n";
