@@ -906,7 +906,7 @@ public void scrsize(void)
 #ifdef TIOCGWINSZ
 	{
 		struct winsize w;
-		if (ioctl(2, TIOCGWINSZ, &w) == 0)
+		if (ioctl(2, TIOCGWINSZ, &w) == 0 || ioctl(1, TIOCGWINSZ, &w) == 0)
 		{
 			if (w.ws_row > 0)
 				sys_height = w.ws_row;
@@ -918,7 +918,7 @@ public void scrsize(void)
 #ifdef WIOCGETD
 	{
 		struct uwdata w;
-		if (ioctl(2, WIOCGETD, &w) == 0)
+		if (ioctl(2, WIOCGETD, &w) == 0 || ioctl(1, WIOCGETD, &w) == 0)
 		{
 			if (w.uw_height > 0)
 				sys_height = w.uw_height / w.uw_vs;
