@@ -1076,7 +1076,7 @@ v690  12/31/25  Cleanup.
 v691  1/10/26   Fix mingw build.
 v692            Fix memory leak in setupterm; clear termio ICRNL|INLCR;
                 fix bug with negative value in -z; fix bug with empty 
-                terminfo caps.
+                terminfo caps; make lesstest ignore nl_langinfo.
 */
 
 char version[] = "692x";
